# CoincMatch

./: .gitignore  .gitmodules  CMakeLists.txt
Devel/: coinc_match.sh
Devel/ConfigFile/: ConfigFile.ini  ConfigFile_ErrorLog.ini
Source/: CMakeLists.txt  CoincMatch.cpp  CoincMatch.h  Elist.cpp  Elist.h  GF.cpp  GF.h  Headers.h  devel.cpp  main.cpp
Test/: README.md  tests.py
Test/data/test_001/: ParametersFile.txt
